update startup.cs authentication

--- a/OnovaApi/appsettings.json
+++ b/OnovaApi/appsettings.json
@@ -16,5 +16,15 @@
         "Default": "Warning"
       }
     }
-  }
+  },
+  "Authentication": {
+    "Jwt": {
+      "Key": "OnovaJwtToken",
+      "Issuer": "http://localhost:52596/",
+      "ExpireDays": 30
+    },
+    "Cookie": {
+      "Name": ".Onova.Cookies"
+    } 
+  } 
 }
