--- a/OnovaApi/appsettings.json
+++ b/OnovaApi/appsettings.json
@@ -19,12 +19,15 @@
   },
   "Authentication": {
     "Jwt": {
-      "Key": "OnovaJwtToken",
-      "Issuer": "http://localhost:52596/",
-      "ExpireDays": 30
+      "Key": "OnovaJwtToken"
     },
     "Cookie": {
       "Name": ".Onova.Cookies"
-    } 
-  } 
+    }
+  }
 }
+
+/** //  Command to scaffold the dbcontext and models
+    //  Note: Command must be run on PMC, not in CMD
+Scaffold-DbContext "Server=.;Database=Onova;User=sa;Password=123456;Trusted_Connection=True;MultipleActiveResultSets=true" Microsoft.EntityFrameworkCore.SqlServer -OutputDir Models/DatabaseModels -Force -DataAnnotations -Context "OnovaDbContext"
+**/
