Waiting for seeding method

--- a/OnovaApi/appsettings.json
+++ b/OnovaApi/appsettings.json
@@ -24,6 +24,13 @@
     "Cookie": {
       "Name": ".Onova.Cookies"
     }
+  },
+  "ExternalLogin": {
+    "Facebook": {
+      "APIVersion": "v2.11",
+      "AppID": "167241287210501",
+      "AppSecret": "61c2c3141ba6edb330ca21afed4b078a"
+    }
   }
 }
 
