Done simple seed method! Done return login token! Not test multiple role!

--- a/OnovaApi/appsettings.json
+++ b/OnovaApi/appsettings.json
@@ -19,7 +19,7 @@
   },
   "Authentication": {
     "Jwt": {
-      "Key": "OnovaJwtToken"
+      "Key": "OnovaJwtToken111"
     },
     "Cookie": {
       "Name": ".Onova.Cookies"
