Waiting for FacebookLogin method complete.

--- a/OnovaStore/Properties/launchSettings.json
+++ b/OnovaStore/Properties/launchSettings.json
@@ -18,6 +18,7 @@
     "OnovaStore": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "http://localhost:58212/simple/test",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
