--- a/OnovaStore/appsettings.json
+++ b/OnovaStore/appsettings.json
@@ -14,19 +14,38 @@
       }
     }
   },
-  "Authentication": {
+ /* "Authentication": {
     "Jwt": {
       "Key": "OnovaJwtToken111"
-    },
-    "Cookie": {
-      "Name": ".Onova.Cookies"
     }
-  },
+  },*/
   "ExternalLogin": {
     "Facebook": {
       "APIVersion": "v2.11",
       "AppID": "167241287210501",
       "AppSecret": "61c2c3141ba6edb330ca21afed4b078a"
     }
+  },
+
+  // JWT Validation
+  "JwtTokenValidationSettings": {
+    "SecretKey": "OnovaJwtToken111"
+  },
+
+  "JwtTokenIssuerSettings": {
+    "BaseAddress": "http://localhost:5000/",
+    "Login": "/api/auth/login/"
+    //"RenewToken": "/api/auth/renewtoken/"
+  },
+
+  // Authentication Cookies
+  "AuthenticationSettings": {
+    "LoginPath": "/Account/Login/",
+    "AccessDeniedPath": "/Account/Forbidden/"
+  },
+
+  // REST client
+  "RestClientSettings": {
+    "BaseAddress": "http://localhost:5000"
   }
 }
