--- a/OnovaStore/OnovaStore.csproj
+++ b/OnovaStore/OnovaStore.csproj
@@ -14,6 +14,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="System\Settings\" />
+    <Folder Include="System\Security\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
