--- a/OnovaStore/OnovaStore.csproj
+++ b/OnovaStore/OnovaStore.csproj
@@ -14,6 +14,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Areas\Manage\Controllers\" />
+    <Folder Include="Areas\Manage\Data\" />
+    <Folder Include="Areas\Manage\Models\" />
     <Folder Include="System\Settings\" />
     <Folder Include="System\Security\" />
     <Folder Include="wwwroot\" />
