--- a/OnovaStore/Properties/launchSettings.json
+++ b/OnovaStore/Properties/launchSettings.json
@@ -18,7 +18,7 @@
     "OnovaStore": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "http://localhost:58212/account/login",
+      "launchUrl": "http://localhost:58212/",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
