Done layout forgot password, send email to reset password. Waiting for send email after user subcribe.

--- a/OnovaApi/appsettings.json
+++ b/OnovaApi/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=Onova;User=sa;Password=123456;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection":
+      "Server=.;Database=Onova;User=sa;Password=123456;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
@@ -31,6 +32,10 @@
       "AppID": "167241287210501",
       "AppSecret": "61c2c3141ba6edb330ca21afed4b078a"
     }
+  },
+  "SendGridService": {
+    "User": "OnovaEmail",
+    "Key": "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"
   }
 }
 
