continue frontend imageupload and backend api to insert to db.

--- a/OnovaApi/appsettings.json
+++ b/OnovaApi/appsettings.json
@@ -1,7 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection":
-      "Server=.;Database=Onova;User=sa;Password=123456;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.;Database=Onova;User=sa;Password=123456;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
