--- a/OnovaStore/appsettings.json
+++ b/OnovaStore/appsettings.json
@@ -14,7 +14,7 @@
       }
     }
   },
- /* "Authentication": {
+  /* "Authentication": {
     "Jwt": {
       "Key": "OnovaJwtToken111"
     }
@@ -47,5 +47,11 @@
   // REST client
   "RestClientSettings": {
     "BaseAddress": "http://localhost:5000"
+  },
+
+  "CloudinarySettings": {
+    "CloudName": "vinhloc1996",
+    "ApiKey": "193551597764357",
+    "ApiSecret": "QQ012_wZ4lmAhe8iD_g837glNko"
   }
 }
