--- a/OnovaStore/OnovaStore.csproj
+++ b/OnovaStore/OnovaStore.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Models\Brand\" />
     <Folder Include="System\Settings\" />
     <Folder Include="System\Security\" />
     <Folder Include="wwwroot\html\assets\js\components\" />
