Done promotion, continue fixing the date format in edit view. Working on product.

--- a/OnovaApi/OnovaApi.csproj
+++ b/OnovaApi/OnovaApi.csproj
@@ -27,6 +27,8 @@
     <Compile Remove="Migrations\20180406160318_AddDefaultValue.Designer.cs" />
     <Compile Remove="Migrations\20180406160402_AddDefaultValue.cs" />
     <Compile Remove="Migrations\20180406160402_AddDefaultValue.Designer.cs" />
+    <Compile Remove="Migrations\20180410164827_RemoveRequiredAttribute.cs" />
+    <Compile Remove="Migrations\20180410164827_RemoveRequiredAttribute.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
