continue on payment api

--- a/OnovaStore/appsettings.json
+++ b/OnovaStore/appsettings.json
@@ -53,5 +53,10 @@
     "CloudName": "vinhloc1996",
     "ApiKey": "193551597764357",
     "ApiSecret": "QQ012_wZ4lmAhe8iD_g837glNko"
-  }
+  },
+
+  "Stripe": {
+    "PublishableKey": "pk_test_saX8KZponYzUdi2u54Q8ZdMj",
+    "SecretKey": "sk_test_Nqn6fWJyaMByxo4sZEHPR0Rb"
+  } 
 }
